# hero-images

./: .gitignore  README.md  gemini_batch_labeling.py  gemini_labeling_pipeline.py  generate_label_visualization.py  initial_prompt.txt  ollama_local_labeling.py  prompts.txt  pyproject.toml  requirements.txt  stratified_selector_sequence_aware.py  vllm_local_labeling.py
.claude/: settings.local.json
archive/: analyze_detection_format.py  analyze_detection_format_fixed.py  candidate_selector.py  explore_detection_results.py  generate_candidates.py  generate_candidates_incremental.py  generate_full_candidates.py  generate_sequence_aware_candidates.py  generate_test_candidates.py  get_species_distribution.py  stratified_selector.py  stratified_selector_improved.py  stratified_selector_training.py  test_candidate_selection.py  verify_image_paths.py
hero_images/: __init__.py  gemini_batch_labeling.py  gemini_labeling.py  generate_label_visualization.py  generate_sequence_aware_candidates_optimized.py  image_processor.py  ollama_local_labeling.py  vllm_local_labeling.py
